# WordleOffline

./: ButtonBackRect.qml  CMakeLists.txt  Colors.qml  Game.qml  GameSettings.qml  GeoPosAccessManager.cpp  GeoPosAccessManager.hpp  GeoPosAccessManagerSingleton.qml  JsonWordProvider.cpp  JsonWordProvider.hpp  LoseScreen.qml  MainMenu.qml  README.md  SettingsMenu.qml  WinScreen.qml  WordRow.qml  main.cpp  main.qml  wordlist.json
